# worktree-color-sync

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
config/: worktree-sync.toml.example
crates/color-engine/: Cargo.toml
crates/color-engine/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: allocator.rs  config.rs  git.rs  lib.rs  paths.rs  protocol.rs  state.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: cursor.rs  ghostty.rs  lib.rs
crates/worktree-sync/: Cargo.toml
crates/worktree-sync/src/: main.rs
crates/worktree-sync/tests/: cycle_color_integration.rs  error_handling.rs  integration.rs
shell/: hook.zsh
