[workspace]
members = [
  "crates/color-engine",
  "crates/core",
  "crates/integrations",
  "crates/worktree-sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Worktree Color Sync Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
