[package]
name = "worktree-color-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
worktree-color-sync-color-engine = { path = "../color-engine" }

[dev-dependencies]
tempfile = "3"
