[package]
name = "worktree-color-sync-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
worktree-color-sync-color-engine = { path = "../color-engine" }
worktree-color-sync-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
