[package]
name = "worktree-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "worktree-sync"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
worktree-color-sync-core = { path = "../core" }
worktree-color-sync-integrations = { path = "../integrations" }
